# NATURaL

./: .gitattributes  .gitignore  .swiftlint.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  POKEDRUG_PLAN.md  POKEMON_PITCH_DECK.md  README.md  SECURITY.md  TEST_COVERAGE_ANALYSIS.md  translate_poses.py
.claude/skills/benchmark-status/: SKILL.md
.claude/skills/quality-fix/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Bonhomme/: Bonhomme.entitlements  Info.plist
Bonhomme/App/: AppState.swift  BonhommeApp.swift  DEBUGGING_SUMMARY.md  DebugDashboardView.swift  QUICK_REFERENCE.md  STARTUP_CHECKLIST.md
Bonhomme/Features/History/: HistoryView.swift
Bonhomme/Features/Paywall/: PaywallView.swift
Bonhomme/Features/Prescriptions/: PokeDrugSubstanceInsightView.swift  PrescriptionsView.swift
Bonhomme/Features/Summary/: ActivityRingsView.swift  SummaryView.swift  WorkoutShareCard.swift
Bonhomme/Features/Workout/: CountdownView.swift  HomeView.swift  MetricsOverlayView.swift  StyleDetailView.swift  WorkoutFlowView.swift  WorkoutFlowViewModel.swift  YouTubePlayerView.swift  YouTubeProgramPickerView.swift  YouTubeWorkoutScreen.swift  YouTubeWorkoutViewModel.swift
Bonhomme/LiveActivity/: WorkoutActivityAttributes.swift  WorkoutLiveActivity.swift
Bonhomme/LiveActivity 2/: WorkoutActivityAttributes.swift  WorkoutLiveActivity.swift
Bonhomme/Services/CareKit/: CareKitBridge.swift  YogaTaskBuilder.swift
Bonhomme/Services/HealthKit/: ActivityRingService.swift  FitnessPlusReader.swift  HealthKitManager.swift  HeartRateMonitor.swift  InsightEngine.swift  MedicationPrescriptionService.swift  MedicationTracker.swift  ResearchKitBridge.swift  WorkoutRecorder.swift  YogaStyle+HealthKit.swift
Bonhomme/Services/Music/: ClusterFleetPresenceCoordinator.swift  LowLatencyAudioRouter.swift  MusicService.swift
Bonhomme/Services/Persistence/: PersistentModels.swift  WorkoutStateStore.swift
Bonhomme/Services/SharePlay/: ChairYogaActivity.swift  SessionCoordinator.swift
Bonhomme/Services/Siri/: IntentBridge.swift  WorkoutIntents.swift
Bonhomme/Services/Subscription/: Entitlement.swift  SubscriptionManager.swift
Bonhomme/Services/WatchConnectivity/: CONSOLE_MESSAGE_GUIDE.md  PhoneConnectivityBridge.swift  WORKOUT_COUNTDOWN_FIX.md
Bonhomme/Shared/: AppGroupStore.swift
Bonhomme/Shared/Components/: ActivityRingsView.swift
Bonhomme/TVRelay/: AirPlayRoutePickerView.swift  AirPlaySecondScreen.swift  ExternalDisplaySceneDelegate.swift  NativeCompanionClient.swift  TVDisplayCoordinator.swift
BonhommeAccel/: CMakeLists.txt  TESTING.md
BonhommeAccel/include/: BonhommeAccel.h
BonhommeAccel/src/api/: bonhomme_accel.cpp
BonhommeAccel/src/audio/: ClusterFuckSyncKernel.cpp
BonhommeAccel/src/backends/cuda/: correlation_cuda.cu  cuda_backend.h  entropy_cuda.cu  pairwise_cuda.cu
BonhommeAccel/src/backends/metal/: correlation_metal.mm  entropy_metal.mm  metal_backend.h  metal_runtime.mm  metal_shaders.h  pairwise_metal.mm
BonhommeAccel/src/backends/openmp/: entropy_omp.cpp  entropy_omp.h  pairwise_omp.cpp  pairwise_omp.h
BonhommeAccel/src/backends/rocm/: correlation_hip.cpp  entropy_hip.cpp  rocm_backend.h
BonhommeAccel/src/backends/simd/: correlation_avx512.cpp  correlation_simd.cpp  correlation_simd.h  entropy_avx2.cpp  entropy_avx512.cpp  entropy_neon.cpp  entropy_simd.h
BonhommeAccel/src/core/: correlation.cpp  correlation.h  entropy.cpp  entropy.h  incomplete_beta.cpp  incomplete_beta.h  pairwise.cpp  pairwise.h  statistics.cpp  statistics.h
BonhommeAccel/src/dispatch/: backend.h  dispatch.cpp
BonhommeAccel/tests/: reference_values.h  test_circular_simd.cpp  test_correlation.cpp  test_entropy.cpp  test_incomplete_beta.cpp  test_pairwise.cpp
BonhommeAccel/xcconfig/: BonhommeAccel.ios.xcconfig
BonhommeCore/: AirFoilQualityRouter.swift  AlexaBTGroup.swift  AppInitializationTests.swift  AudioRouter.swift  AudioSyncManager.swift  CrooksCycleController.swift  CrownController.swift  FlexAIDAudioSyncKernel.cpp  LOCALIZATION_GUIDE.md  Package.swift  default.profraw
BonhommeCore/Sources/BonhommeAccelSwift/: AccelBackend.swift  AccelCorrelation.swift  AccelEntropy.swift  AccelPairwise.swift  AccelStatistics.swift
BonhommeCore/Sources/BonhommeCore/: HapticFeedbackEngine.swift
BonhommeCore/Sources/clibBonhommeAccel/: shim.c
BonhommeTV/: Info.plist
BonhommeTV/App/: BonhommeTVApp.swift
BonhommeTV/Networking/: CompanionListener.swift
BonhommeTV/Views/: TVRootView.swift
BonhommeVision/: Info.plist
BonhommeVision/App/: BonhommeVisionApp.swift  ImmersivePoseSpace.swift  SpatialBiofeedbackView.swift  SpatialPoseView.swift
BonhommeWatch/: BonhommeWatch.entitlements  Info.plist
BonhommeWatch/App/: BonhommeWatchApp.swift  BreathingHapticGuide.swift  WatchConnectivityBridge.swift  WatchHomeView.swift  WatchSessionView.swift  WatchWorkoutManager.swift
BonhommeWatch/Sources/: HapticFeedbackEngine.swift
Docs/: ON_DEVICE_INSTALL.md
NATURaL.xcodeproj/: BONHOMME_CORE_FIX.md  BonhommeCoreLocalizedString.swift  BonhommeCorePoseCatalog.swift  BonhommeCoreYogaStyle.swift  LANGUAGE_SUPPORT_STATUS.md  LocalizationTests.swift  LocalizedStringLocaleTests.swift  PoseCatalog.swift  StyleDetailView.swift  WorkoutPlan.swift  YogaPose.swift  YogaStyle.swift  project.pbxproj  project.pbxproj.backup
NATURaL.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
NATURaLLiveActivity/: Info.plist  WorkoutLiveActivity.swift
NATURaLWidgets/: ActivityRingsWidget.swift  Info.plist  NATURaLWidgets.entitlements  NATURaLWidgetsBundle.swift  StreakWidget.swift
Sources/: HapticFeedbackEngine.swift
Sources/NATURALWatch/: NATURALWatch.swift
Sources/NATURaL/: BiometricIntegration.swift  HapticFeedbackEngine.swift
Tests/BonhommeTests/: TVDisplayCoordinatorTests.swift  WorkoutFlowViewModelTests.swift
Tests/BonhommeUITests/: AirPlayFallbackUITests.swift  WorkoutFlowUITests.swift
scripts/: build-accel-apple.sh  install-device.sh
(+125 files in other folders)
